{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 177,
  "lineage": "cbeb99cb-9581-a30c-e9a9-3aa8fade6a26",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-008497053a0877062",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008497053a0877062",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01cfc38279824a800",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-216-134-223.compute-1.amazonaws.com",
            "public_ip": "3.216.134.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05e1c9faf6e897f31",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bastion",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bastion",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d0285fae5aa6795"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ocp_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bootstrap",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0b15b234dc70dd4b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-0b15b234dc70dd4b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f286228a83b88686",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-32-196-120-72.compute-1.amazonaws.com",
            "public_ip": "32.196.120.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0601bb0e1dd706a6f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bootstrap",
              "OCPRole": "bootstrap",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bootstrap",
              "OCPRole": "bootstrap",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "master0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0148dbb43c4c20193",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-0148dbb43c4c20193",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0531202a2ef140bc7",
            "private_dns": "ip-10-0-1-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.21",
            "public_dns": "ec2-44-200-54-164.compute-1.amazonaws.com",
            "public_ip": "44.200.54.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cad104ae8d044e57",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master0",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master0",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "master1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-06f8c049494fe19fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-06f8c049494fe19fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0719eda21d15fef06",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-3-230-3-116.compute-1.amazonaws.com",
            "public_ip": "3.230.3.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02c840fa77da7219a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master1",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master1",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "master2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0ebf6956987a0af49",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-0ebf6956987a0af49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f1303f95cb032129",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-32-197-33-94.compute-1.amazonaws.com",
            "public_ip": "32.197.33.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05f9f94933b8978cc",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master2",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-master2",
              "OCPRole": "master",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "worker0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-085e7307b2538618f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-085e7307b2538618f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a4f3e77193566b8",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-100-29-185-210.compute-1.amazonaws.com",
            "public_ip": "100.29.185.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e99dd9fdedf5a7a2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-worker0",
              "OCPRole": "worker",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-worker0",
              "OCPRole": "worker",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "worker1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00403f401ee6a4b98",
            "arn": "arn:aws:ec2:us-east-1:853973692277:instance/i-0d6c2e6406c3b773f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_options": [
              {
                "core_count": 48,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ocp-poc-node-profile",
            "id": "i-0d6c2e6406c3b773f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.metal",
            "ipv6_address_count": 0,
            "key_name": "openshift-poc-rhcos-node",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010acea98bffd8086",
            "private_dns": "ip-10-0-1-25.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-44-204-97-225.compute-1.amazonaws.com",
            "public_ip": "44.204.97.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04eda0adb148f1f9e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09fbe943f9c0796ed",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-worker1",
              "OCPRole": "worker",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-worker1",
              "OCPRole": "worker",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e13b05920255799"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ocp_node",
            "aws_iam_role.ocp_node",
            "aws_instance.bastion",
            "aws_key_pair.ocp",
            "aws_security_group.bastion",
            "aws_security_group.ocp_nodes",
            "aws_subnet.ocp",
            "aws_vpc.ocp",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ocp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:internet-gateway/igw-0f208ee6b4e8c556b",
            "id": "igw-0f208ee6b4e8c556b",
            "owner_id": "853973692277",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-igw",
              "Project": "ocp-poc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-igw",
              "Project": "ocp-poc"
            },
            "vpc_id": "vpc-08d855c62dab21d5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ocp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:route-table/rtb-07b15a2b69fc7fc33",
            "id": "rtb-07b15a2b69fc7fc33",
            "owner_id": "853973692277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f208ee6b4e8c556b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-rt",
              "Project": "ocp-poc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-rt",
              "Project": "ocp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d855c62dab21d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ocp",
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ocp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9b64a248820e7cb",
            "route_table_id": "rtb-07b15a2b69fc7fc33",
            "subnet_id": "subnet-09fbe943f9c0796ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ocp",
            "aws_route_table.ocp",
            "aws_subnet.ocp",
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-07d0285fae5aa6795",
            "description": "Bastion: SSH from internet, all traffic within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d0285fae5aa6795",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "All traffic from VPC subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ocp-poc-bastion-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bastion-sg",
              "Project": "ocp-poc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-bastion-sg",
              "Project": "ocp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d855c62dab21d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ocp_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:security-group/sg-05e13b05920255799",
            "description": "OCP nodes: all traffic within VPC, outbound to internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e13b05920255799",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "All traffic from VPC subnet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "All traffic from same SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ocp-poc-nodes-sg",
            "name_prefix": "",
            "owner_id": "853973692277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-nodes-sg",
              "Project": "ocp-poc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-nodes-sg",
              "Project": "ocp-poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d855c62dab21d5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ocp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:subnet/subnet-09fbe943f9c0796ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fbe943f9c0796ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "853973692277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-subnet",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-subnet",
              "Project": "ocp-poc",
              "createdby": "pradeepsn@presidio.com",
              "modifiedby": "pradeepsn@presidio.com"
            },
            "vpc_id": "vpc-08d855c62dab21d5e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ocp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ocp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:853973692277:vpc/vpc-08d855c62dab21d5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6fd833793c03539",
            "default_route_table_id": "rtb-08a9e89853afcc726",
            "default_security_group_id": "sg-04b26e4c469208f32",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d855c62dab21d5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a9e89853afcc726",
            "owner_id": "853973692277",
            "tags": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-vpc",
              "Project": "ocp-poc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "ocp-poc-vpc",
              "Project": "ocp-poc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}